--- a/ethics/ethics/approaches/index.qmd
+++ b/ethics/ethics/approaches/index.qmd
@@ -1,6 +1,6 @@
 ---
 title: "Frameworks"
-subtitle: "Three frameworks for Data Science Ethics — and why you should think about them"
+subtitle: "Three frameworks for Data Science Ethics — and why you should think about how you approach the ethics of data science"
 author:
   - name: Johannes Himmelreich
     id: jh
@@ -12,7 +12,7 @@ author:
         state: NY
         url: www.syracuse.edu
 date: "2024-02-22"
-categories: ["Category1", "Category2", "Category3"]
+categories: ["Foundational Concepts", "Bias", "Methodology"]
 toc: true
 draft: false
 code-link: true
